<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/v_all_match_parent">

    <include layout="@layout/include_centertitletoolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            style="@style/h_match_parent_no"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical">

            <ImageView
                style="@style/text"
                android:src="@drawable/icon_phone" />


            <com.xson.common.widget.DrawClickableEditText
                android:id="@+id/phone_et"
                style="@style/editText_bottom_style"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/input_phone_number"
                android:inputType="phone"
                android:paddingRight="15dp" />

        </LinearLayout>

        <LinearLayout
            style="@style/h_match_parent_no"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                style="@style/text"
                android:src="@drawable/icon_pwd" />


            <LinearLayout
                style="@style/h_match_parent_no"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/border_bottom_divider"
                android:gravity="center_vertical">


                <com.xson.common.widget.DrawClickableEditText
                    android:id="@+id/pwd_et"
                    style="@style/editText_bottom_style"
                    android:layout_marginRight="@dimen/d_15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_password_count"
                    android:inputType="textPassword"
                    android:maxLength="18" />

                <ImageView
                    android:id="@+id/showPwd_iv"
                    style="@style/text"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/pwd_off" />


            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/forgotPwd_tv"
            style="@style/text12color666"
            android:visibility="invisible"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/d_10dp"
            android:layout_marginTop="@dimen/d_12dp"
            android:text="@string/forget_pw" />

        <Button
            android:id="@+id/login_bt"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d_50dp"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>
